--- a/index.css
+++ b/index.css
@@ -129,14 +129,23 @@ main > div:first-child {
   top: 0;
   background-color: white;
   display: flex;
-  border-bottom: 1px solid #eaecef;
+}
+@media screen and (min-width: 768px) {
+  main > div:first-child {
+    border-bottom: 1px solid #eaecef;
+  }
 }
 main > div:first-child .mini-detail {
-  display: flex;
   opacity: 0;
   align-items: center;
   justify-content: center;
+  display: none;
   flex: 2;
+}
+@media screen and (min-width: 768px) {
+  main > div:first-child .mini-detail {
+    display: flex;
+  }
 }
 main > div:first-child .mini-detail > h6 {
   opacity: 0.8;
@@ -150,9 +159,14 @@ main > div:first-child .mini-detail > img {
   margin-right: 1.2rem;
 }
 main > div:first-child > div:nth-child(2) {
-  display: flex;
   flex: 5;
   align-items: center;
+  display: none;
+}
+@media screen and (min-width: 768px) {
+  main > div:first-child > div:nth-child(2) {
+    display: flex;
+  }
 }
 main > div:first-child > div:nth-child(2) p {
   font: size 0.875rem;
@@ -182,6 +196,12 @@ div.main-container {
   display: flex;
   margin-right: 10%;
   margin-left: 3%;
+  flex-direction: column;
+}
+@media screen and (min-width: 768px) {
+  div.main-container {
+    flex-direction: row;
+  }
 }
 div.main-container > div:first-child {
   flex: 2;
@@ -272,11 +292,22 @@ ul .repo-container > div:nth-child(2) > span:first-child > span {
 
 .detail-container {
   display: flex;
-  align-items: flex-start;
-  flex-direction: column;
+  align-items: center;
+}
+@media screen and (min-width: 768px) {
+  .detail-container {
+    align-items: flex-start;
+    flex-direction: column;
+  }
 }
 .detail-container .image-container {
   margin-top: -35px;
+  margin-right: 12px;
+}
+@media screen and (min-width: 768px) {
+  .detail-container .image-container {
+    margin-right: 0;
+  }
 }
 .detail-container .image-container > div {
   position: relative;
@@ -312,10 +343,57 @@ ul .repo-container > div:nth-child(2) > span:first-child > span {
   font-weight: 300;
   color: #586069;
 }
-.detail-container > div:last-child > *:last-child {
+.detail-container > div:last-child > p {
+  display: inline;
   font-size: 1rem;
   font-weight: 400;
   color: #24292e;
+}
+.detail-container > div:last-child .extraOwner-detail {
+  display: flex;
+  flex-direction: column;
+  margin: 1rem 0;
+}
+.detail-container > div:last-child .extraOwner-detail > button {
+  background-color: #f3f4f6;
+  transition-duration: 0.1s;
+  padding: 5px 16px;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 20px;
+  border: 1px solid #1b1f2326;
+  color: #24292e;
+  border-radius: 6px;
+  margin-bottom: 1rem;
+}
+.detail-container > div:last-child .extraOwner-detail > div:nth-child(2) {
+  display: flex;
+  align-items: center;
+}
+.detail-container > div:last-child .extraOwner-detail > div:nth-child(2) svg, .detail-container > div:last-child .extraOwner-detail > div:nth-child(2) i {
+  opacity: 0.5;
+}
+.detail-container > div:last-child .extraOwner-detail > div:nth-child(2) > p {
+  text-align: center;
+}
+.detail-container > div:last-child .extraOwner-detail > div:nth-child(2) > * {
+  display: flex;
+  align-items: center;
+  margin: 0.4rem;
+}
+.detail-container > div:last-child .extraOwner-detail > div:nth-child(2) > * *:nth-child(2) {
+  margin: 0 0.3rem;
+}
+.detail-container > div:last-child .extraOwner-detail > div:nth-child(2) > * > *:last-child {
+  opacity: 0.5;
+}
+.detail-container > div:last-child .extraOwner-detail > *:last-child {
+  display: flex;
+  align-items: flex-end;
+}
+.detail-container > div:last-child .extraOwner-detail > *:last-child svg, .detail-container > div:last-child .extraOwner-detail > *:last-child i {
+  opacity: 0.5;
+  margin-right: 0.3rem;
 }
 
 .show {
