--- a/index.css
+++ b/index.css
@@ -120,6 +120,11 @@ nav > div:last-child > span:first-child .mail-status {
 nav > div:last-child > *:not(:first-child) {
   display: none;
 }
+@media screen and (min-width: 768px) {
+  nav > div:last-child > *:not(:first-child) {
+    display: flex;
+  }
+}
 
 main {
   padding-top: 2.5rem;
