--- a/index.css
+++ b/index.css
@@ -11,6 +11,14 @@ h1, h2, h3, h4, p {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji;
 }
 
+img#submit-form:hover {
+  cursor: pointer;
+}
+
+#input-field {
+  outline: none;
+}
+
 nav {
   display: flex;
   background-color: #24292e;
